--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 # Project exclude paths
 /chapter_3/target/
+/.idea/.gitignore
+/.idea/discord.xml
+/.idea/encodings.xml
+/.idea/learn-rust.iml
+/.idea/material_theme_project_new.xml
+/.idea/modules.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/vcs.xml
